# jocasta-emu

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.MD  imgui.ini
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  release.yml
cmake/toolchains/: dreamcast-kos.cmake  windows-clang-mingw.cmake
jocasta-cast/: CMakeLists.txt
jocasta-cast/src/: dc_app.cpp
jocasta-gui/: CMakeLists.txt
jocasta-gui/src/: app_settings.cpp  app_settings.h  application.cpp  application.h  audiowrap.cpp  audiowrap.h  bios_checker.h  full_sys.cpp  full_sys.h  keybinding.cpp  keybinding.h  keymap_translate.h  my_texture_ogl3.h  my_texture_sdlgpu.cpp  my_texture_sdlr3.h  my_texture_wgpu.h  virtual_input.cpp  virtual_input.h
jocasta-lib/: CMakeLists.txt
jocasta-lib/code_gen/dreamcast/registers/: reggie.py
jocasta-lib/code_gen/huc6280/: huc6280_gen.py
jocasta-lib/code_gen/m6502/: m6502_core_generator.js
jocasta-lib/code_gen/m68k/: instruction_grouping_for_gen.py  test_out.h
jocasta-lib/code_gen/m68k/ins_decode/: make_decoder.py
jocasta-lib/code_gen/sm83/: sm83_opcodes.js
jocasta-lib/code_gen/wdc65816_and_spc700/: wdc65816_core_generator.js
jocasta-lib/code_gen/z80/: z80_core_generator.js
jocasta-lib/src/component/floppy/: apple2_floppy.cpp  apple2_floppy.h  generic_floppy.h  mac_floppy.cpp  mac_floppy.h
jocasta-lib/src/helpers/: audio_dump.h  audio_ring.h  bitbuffer.h  block_cache_better.h  block_cache_interface.h  block_cache_vector.h  buf.cpp  buf.h  cdrom_formats.cpp  cdrom_formats.h  color.h  debug.cpp  debug.h  elf_helpers.cpp  elf_helpers.h  enums.h  file_exists.cpp  img.h  int.h  irq_multiplexer.h  jsm_string.cpp  jsm_string.h  mem_template_macros.h  minmax.h  path_util.h  physical_io.h  scheduler.cpp  scheduler.h  setbits.h  simplebuf.cpp  simplebuf.h  sram.cpp  sys_interface.cpp  sys_interface.h  user.cpp  user.h
jocasta-lib/src/helpers/debugger/: console.cpp  dbglog.cpp  debugger.cpp  debugger.h  debuggerdefs.h  memory.cpp  source_list.cpp  waveform2.cpp
jocasta-lib/src/helpers/present/: sys_present.cpp  sys_present.h
jocasta-lib/src/helpers/serialize/: serialize.cpp  serialize.h
jocasta-lib/src/ooc/: ooc.h
jocasta-lib/src/system/apple2/: apple2.cpp  apple2.h  apple2_bus.cpp  apple2_bus.h  apple2_debugger.cpp  iou.cpp  iou.h  mmu.cpp  mmu.h  slot.h  slot_disk2.cpp  slot_disk2.h
jocasta-lib/src/system/atari2600/: atari2600.cpp  atari2600.h  atari2600_bus.cpp  atari2600_bus.h  atari2600_debugger.cpp  atari2600_debugger.h  cart.cpp  cart.h  tia.cpp  tia.h  tia_old.c
jocasta-lib/src/system/commodore64/: c64_bus.cpp  c64_bus.h  c64_debugger.cpp  c64_joypad.cpp  c64_joypad.h  c64_keyboard.cpp  c64_keyboard.h  c64_mem.cpp  c64_mem.h  c64_vic2_color.cpp  commodore64.cpp  vic2.cpp  vic2.h
jocasta-lib/src/system/cosmac_vip/: cosmac_vip.cpp  vip_bus.cpp  vip_bus.h  vip_clock.h  vip_debugger.cpp  vip_serialize.cpp  vip_serialize.h
jocasta-lib/src/system/dcgba/: dcgba.cpp  dcgba.h
jocasta-lib/src/system/dreamcast/: dc_bus.cpp  dc_bus.h  dc_controller.cpp  dc_controller.h  dc_debugger.cpp  dc_debugger.h  dc_g2.cpp  dc_g2.h  dc_gdrom.cpp  dc_gdrom.h  dc_maple.cpp  dc_maple.h  dc_mem.cpp  dc_mem.h  dreamcast.cpp  dreamcast.h
jocasta-lib/src/system/galaksija/: galaksija.cpp  galaksija_bus.cpp  galaksija_bus.h
jocasta-lib/src/system/gb/: cart.cpp  cart.h  gb.cpp  gb_bus.cpp  gb_bus.h  gb_clock.cpp  gb_clock.h  gb_cpu.cpp  gb_cpu.h  gb_ppu.cpp  gb_ppu.h  gb_serialize.cpp
jocasta-lib/src/system/gba/: gba.cpp  gba_apu.cpp  gba_apu.h  gba_bus.cpp  gba_bus.h  gba_clock.cpp  gba_clock.h  gba_controller.cpp  gba_controller.h  gba_debugger.cpp  gba_debugger.h  gba_dma.cpp  gba_dma.h  gba_ppu.cpp  gba_ppu.h  gba_serialize.cpp  gba_serialize.h  gba_timers.cpp  gba_timers.h
jocasta-lib/src/system/genesis/: genesis.cpp  genesis_bus.cpp  genesis_bus.h  genesis_cart.cpp  genesis_cart.h  genesis_clock.cpp  genesis_clock.h  genesis_debugger.cpp  genesis_debugger.h  genesis_serialize.cpp  genesis_vdp.cpp  genesis_vdp.h
jocasta-lib/src/system/mac/: mac.cpp  mac_bus.cpp  mac_bus.h  mac_clock.h  mac_debugger.h  mac_display.cpp  mac_display.h  mac_fdd.cpp  mac_fdd.h  mac_iwm.cpp  mac_iwm.h  mac_source_list.cpp  mac_via.cpp  mac_via.h
jocasta-lib/src/system/nds/: nds.cpp  nds_apu.cpp  nds_apu.h  nds_bus.cpp  nds_bus.h  nds_clock.h  nds_controller.cpp  nds_controller.h  nds_debugger.cpp  nds_debugger.h  nds_dma.cpp  nds_irq.cpp  nds_ppu.cpp  nds_ppu.h  nds_rtc.cpp  nds_serialize.cpp  nds_serialize.h  nds_spi.cpp  nds_timers.cpp  nds_timers.h  nds_vram.cpp
jocasta-lib/src/system/neogeo/: neo_b1.cpp  neo_b1.h  neogeo.cpp  neogeo.h  ng_bus.cpp  ng_bus.h  ng_cart.cpp  ng_cart.h  ng_controllerport.cpp  ng_controllerport.h  ng_debugger.cpp  ng_debugger.h  ng_lpsc2_a2.cpp  ng_lpsc2_a2.h  ng_serialize.cpp  ng_serialize.h
jocasta-lib/src/system/nes/: nes.cpp  nes.h  nes_bus.cpp  nes_bus.h  nes_cart.cpp  nes_cart.h  nes_clock.h  nes_cpu.cpp  nes_cpu.h  nes_debugger.cpp  nes_debugger.h  nes_ppu.cpp  nes_ppu.h  nes_serialize.cpp
jocasta-lib/src/system/ngp/: ngp.cpp  ngp.h  ngp_bus.cpp  ngp_bus.h
jocasta-lib/src/system/ps1/: ps1.cpp  ps1_bus.cpp  ps1_bus.h  ps1_clock.cpp  ps1_debugger.cpp  ps1_debugger.h  ps1_dma.cpp  ps1_dma.h  (+7 more)
jocasta-tests/: CMakeLists.txt
jocasta-tests/src/: jocasta-tests.cpp  jocasta-tests.h  z80_drag_race.c  z80_drag_race.h
jocasta-tests/src/cpu-test-generators/: myrandom.h  sh4_test_generator.h
jocasta-tests/src/cpu-tests/: arm7tdmi_cached_tests.cpp  arm7tdmi_cached_tests.h  arm7tdmi_tests.cpp  arm7tdmi_tests.h  cdp1802_tests.cpp  huc6280_tests.h  json_tests.h  m6502_tests.cpp  m68000-tests.cpp  m68000-tests.h  rfb.h  sh4-tests.cpp  sh4-tests.h  sm83-tests.h  spc700_tests.cpp  wdc65816_tests.h  z80-tests.cpp  z80-tests.h
jocasta-tests/src/helper-tests/: dasm-range-tests.h  scheduler-tests.h
scripts/: build-cdi-and-run-flycast.sh  build-dreamcast-cdi.sh  run-flycast.sh
tools/linux/x64/: Dockerfile  build-jocasta-gui.sh
tools/windows/clang-mingw/: Dockerfile  build-jocasta-gui-debug.sh  build-jocasta-gui.sh
(+219 files in other folders)
